Issues:
- Table is not accessible (finding [2] in the Prüfbericht Barrierefreiheit GnuPG Kleopatra 3.1.20.3); in particular, all columns but the first one are fully inaccessible
- Text about storage is not accessible
Issues:
rLIBKLEO Libkleo | |||
rLIBKLEO2d281d8e18cd Add helpers for accessible creation date and expiration date of subkeys | |||
rKLEOPATRA Kleopatra | |||
rKLEOPATRAe649ec6ce6e1 Use NavigatableTreeWidget instead of deriving from QTreeWidget | |||
rKLEOPATRAfe004263cf74 Require needed version of libkleo | |||
rKLEOPATRAd461f8706317 Make the subkeys table accessible | |||
rKLEOPATRA2605dafd4501 Add accessible texts for subkeys table and some column values | |||
rKLEOPATRA67886a3fd245 Create UI of Subkeys widget in code |
Status | Assigned | Task | ||
---|---|---|---|---|
Open | ikloecker | T5824 Kleopatra: Full accessibility support | ||
Testing | None | T6104 Kleopatra: Make Subkeys Details dialog accessible |
The table is now (more) accessible. The second issue doesn't apply anymore because of T6108: Kleopatra: Information on storage location of OpenPGP key should be per subkey.