Create UI of Subkeys widget in code

GnuPG-bug-id: 6104